updated Docker build.